cambio de nombre a carpetas

--- a/asr_practica2_reporte/analisis.tex
+++ b/asr_practica2_reporte/analisis.tex
@@ -2,7 +2,7 @@
 
 \usepackage{cdtBook}
 \usepackage{usecases}
-
+\setlength\parindent{0pt}
 \title{Reporte Problema 2}
 \subtitle{Administración de Servicios en Red}
 \author{Huerta Martínez Jesús Manuel, Monteón Valdéz Raúl Kevin, Olivares García Marco Antonio.}
