Se agrega plantilla para reporte 3 ASR

--- a/asr_practica2_reporte/analisis.tex
+++ b/asr_practica2_reporte/analisis.tex
@@ -4,7 +4,7 @@
 \usepackage{usecases}
 \setlength\parindent{0pt}
 \title{Reporte Problema 2}
-\subtitle{Administración de Servicios en Red}
+\subtitle{Administración de Servicios en Red - 4CM1}
 \author{Huerta Martínez Jesús Manuel, Monteón Valdéz Raúl Kevin, Olivares García Marco Antonio.}
 %\organization{Escuela Superior de Cómputo, IPN}
 
@@ -91,14 +91,12 @@
 \cfinput{conclusiones/kevin}
 
 % Marco.
-\section{Olivares García Marco Antoniol.}
+\section{Olivares García Marco Antonio.}
 \cfinput{conclusiones/marco}
 
 % =================================================================
 %						     BIBLIOGRAFÍA
 % =================================================================
-
-\chapter{Bibliografía.}
 
 \cfinput{bibliografia/bibliografia}
 	
