--- a/asr_practica3_reporte/bibliografia/bibliografia.tex
+++ b/asr_practica3_reporte/bibliografia/bibliografia.tex
@@ -32,7 +32,45 @@
 		\newline
 		Disponible en 
 		\url{http://www.cisco.com/cisco/web/support/LA/102/1025/1025763_HAS_baseline.html}
+
+	%Referencias de la tarea 2.
+	\bibitem{acceso}
+		\textsc{Techopedia}
+		\textit{Remote Access Server (RAS)} [En línea].
+		Techopedia, (S/L), 2011.
+		\newline
+		Disponible en
+		\url{https://www.techopedia.com/definition/3192/remote-access-server-ras}
+
+	\bibitem{correo}
+		\textsc{Wikipedia}
+		\textit{Servidor de correo} [En línea].
+		Wikipedia, (S/L), 2009.
+		\newline
+		Disponible en
+		\url{https://es.wikipedia.org/wiki/Servidor_de_correo}
 		
+	\bibitem{impresion}
+		\textsc{Wikipedia}
+		\textit{Servidor de impresión} [En línea].
+		Wikipedia, (S/L), 2008.
+		\newline
+		Disponible en
+		\url{https://es.wikipedia.org/wiki/Servidor_de_impresi\%C3\%B3n}
+
+	\bibitem{archivos}
+		\textsc{SearchDataCenter en Español} [En línea].
+		SearchiDataCenter, (S/L), 2016.
+		\newline
+		Disponible en
+		\url{https://searchdatacenter.techtarget.com/es/definicion/Servidor-de-archivos}
+
+	\bibitem{http}
+		\textsc{SearchDataCenter en Español} [En línea].
+		SearchiDataCenter, (S/L), 2015.
+		\newline
+		Disponible en
+		\url{https://searchdatacenter.techtarget.com/es/definicion/Servidor-Web}
 
 \end{thebibliography}
 
