--- a/asr_practica3_reporte/bibliografia/bibliografia.tex
+++ b/asr_practica3_reporte/bibliografia/bibliografia.tex
@@ -17,22 +17,28 @@
 		Disponible en 
 		\url{http://www.gadae.com/blog/ventajas-red-de-ordenadores-empresa/}
 
-	\bibitem{admin_redCisco} 
-		\textsc{CISCO,}
-		\textit{Sistema de administración de red: Informe oficial de Mejores Prácticas} [En línea].
-		CISCO. España, 2007. 
+	\bibitem{estatico} 
+		\textsc{Universidad Veracruzana,}
+		\textit{Enrutamiento estático} [En línea].
+		Facultad de estadística e informática, Universidad Veracruzana. México, (S/F). 
 		\newline
 		Disponible en 
-		\url{https://www.cisco.com/c/es_mx/support/docs/availability/high-availability/15114-NMS-bestpractice.html}
+		\url{https://www.uv.mx/personal/ocruz/files/2014/01/Enrutamiento-estatico.pdf}
 
-	\bibitem{lineaBase} 
-		\textsc{Cisco Systems Inc,}
-		\textit{White Paper de las mejores prácticas del proceso de línea de base} [En línea].
-		CISCO. (S/L), 2015. 
+	\bibitem{rip} 
+		\textsc{E. Duarte,}
+		\textit{Cisco CCNA – Cómo Configurar Protocolo RIP En Cisco Router} [En línea].
+		Capacity: Information Technology Academy. (S/L), 2014. 
 		\newline
 		Disponible en 
-		\url{http://www.cisco.com/cisco/web/support/LA/102/1025/1025763_HAS_baseline.html}
+		\url{http://blog.capacityacademy.com/2014/06/20/cisco-ccna-como-configurar-protocolo-rip-en-cisco-router/}
 		
-
+	\bibitem{ospf} 
+		\textsc{E. Duarte,}
+		\textit{Cisco CCNA – Cómo Configurar OSPF En Cisco Router} [En línea].
+		Capacity: Information Technology Academy. (S/L), 2014. 
+		\newline
+		Disponible en 
+		\url{http://blog.capacityacademy.com/2014/06/23/cisco-ccna-como-configurar-ospf-en-cisco-router/}
 \end{thebibliography}
 
