--- a/asr_practica3_reporte/analisis.tex
+++ b/asr_practica3_reporte/analisis.tex
@@ -39,6 +39,7 @@
 % =========================================================== %
 
 \chapter{Desarrollo de la práctica}
+\cfinput{desarrollo/desarrollo}
 
 % Tarea 1: Configuración de dispositivos IP
 \section{Tarea 1: Configuración de dispositivos IP}
