--- a/asr_practica3_reporte/cdtBook.sty
+++ b/asr_practica3_reporte/cdtBook.sty
@@ -30,14 +30,17 @@
 
 %=====================================================
 \pagestyle{fancy}
-\fancyhead[LE]{\includegraphics[height=35pt]{images/headerPar}} 
-\fancyhead[RO]{\includegraphics[height=35pt]{images/headerInp}} 
-\fancyhead[RE]{} 
-\fancyhead[LO]{} 
+
+\fancyhf{}
+\rhead{\includegraphics[height=35pt]{images/headerESCOM}} 
+\lhead{\leftmark}
+
+\rfoot{Página: \thepage}
+\lfoot{ASR: Evaluación 3}
 
 \addtolength{\headheight}{2\baselineskip} 
-\fancyfoot[CO,CE]{{\tiny\color{subTitleColor}\em Av. Juan de Dios Bátiz esq. Miguel Othón de Mendizabal S/N Col. Lindavista, GAM, D. F. {\color{sectionColor}\Telefon} 57296000 Ext. 52005 {\color{sectionColor}\Letter} ulises.velez@gmail.com}}
-\fancyfoot[RO,LE]{\footnotesize\thepage}
+
+
 
 
 
